Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-122

Improper use of condition variable which can lead to a race condition during TS process stack startup

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 2.0.0
    • 2.0.0a
    • Core
    • None
    • All platforms.

    Description

      There is an improper use of condition variable in 'librecords' which can lead to a race condition during Traffic Server process stack(TM,TS) startup. This was discovered during porting of Traffic Server to other OS's (FreeBSD,etc). The necessary fix has already been applied to the 'dev' branch.
      -George

      Attachments

        1. TS122_patch1.diff
          0.8 kB
          George Paul

        Activity

          People

            georgep George Paul
            georgep George Paul
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: