TS-122: This patch 'TS122_patch1.diff' fixes the incorrect use of the condition variable in 'librecords'. Tested: ubuntu904,fedora11

git-svn-id: https://svn.apache.org/repos/asf/incubator/trafficserver/traffic/trunk@904528 13f79535-47bb-0310-9956-ffa450edef68